--- a/simpleKeyNavConfig.ini
+++ b/simpleKeyNavConfig.ini
@@ -1,4 +1,4 @@
-﻿[MouseMove]
+[MouseMove]
 up=Up
 down=Down
 left=Left
@@ -15,6 +15,15 @@ lclick=c
 mclick=x
 rclick=z
 
+[MouseMultiplier]
+multiplier1=a
+multiplier1=s
+multiplier1=d
+
+[MouseScroll]
+reverseVScroll=false
+reverseHScroll=false
+activeScroll=Space
 
 [KeyPad]
 1=Delete
@@ -29,12 +38,11 @@ rclick=z
 0=\
 
 [HomeRow]
-LWin=a
-LAlt=s
-LCtrl=d
-LShift=f
-
-RWin=;
-RAlt=l
-RCtrl=k
-RShift=j
+lwin=a
+lalt=s
+lctrl=d
+lshift=f
+rwin=;
+ralt=l
+rctrl=k
+rshift=j
