Params, params everywhere!

--- a/simpleKeyNavConfig.ini
+++ b/simpleKeyNavConfig.ini
@@ -1,5 +1,18 @@
 [System]
 sountFeedback=true
+barTransparence=160
+barColor=Green
+barPadding=100
+barFontSize=12
+barFontSpace=125
+barFontColor=White
+barFontFamily=Cascadia Mono
+barIcoWidth=40
+barTextSpace=50
+clickIcon=click_w.ico
+mouseIcon=mouse_w.ico
+scrollIcon=scroll_w.ico
+speedIcon=speed_w.ico
 
 [MouseMove]
 up=Up
@@ -14,9 +27,9 @@ left=j
 right=l
 
 [MouseClick]
-lclick=c
+lclick=f
 mclick=x
-rclick=z
+rclick=c
 
 [MouseMultiplier]
 multiplier1=a
