Hold instean Double Tap CApsLock

--- a/simpleKeyNavConfig.ini
+++ b/simpleKeyNavConfig.ini
@@ -1,5 +1,5 @@
 [System]
-sountFeedback=true
+sountFeedback=false
 barTransparence=160
 barColor=Green
 barPadding=100
@@ -28,13 +28,14 @@ right=l
 
 [MouseClick]
 lclick=f
-mclick=x
-rclick=c
+mclick=r
+rclick=;
 
 [MouseMultiplier]
+multiplier=1.6
 multiplier1=a
-multiplier1=s
-multiplier1=d
+multiplier2=s
+multiplier3=d
 
 [MouseScroll]
 reverseVScroll=false
